# hs-path2ext

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  hs-path2ext.cabal  opt.sh
app/: Main.hs
src/: PathToExt.hs
