cabal-version:      3.14
name:               hs-path2ext
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-path2ext
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 5,
        hs-path2ext
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules: PathToExt
    build-depends:
        base >= 4.14 && < 5,
        filepath >= 1.5.0 && < 1.6.0
    hs-source-dirs:   src
    default-language: GHC2021
